<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AllStoresActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat">

        <include layout="@layout/toolbar2" />


        <View
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/dropshadow" />
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/featured"
                android:textAllCaps="true"
                android:fontFamily="@font/sunflowerlight"
                android:textSize="16sp"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/featuredRecycler"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:padding="10dp"/>

            <TextView
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewed"
                android:textAllCaps="true"
                android:fontFamily="@font/sunflowerlight"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewedRecycler"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:padding="10dp"/>

            <TextView
                android:paddingStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textAllCaps="true"
                android:fontFamily="@font/sunflowerlight"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/generalRecycler"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:padding="10dp"/>


        </LinearLayout>
    </ScrollView>




</LinearLayout>